www/map-app/styles/style.css
/* ... */
.w3-btn:hover {
  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.2);
  transform: translateX(0px);
}

.map-app-sidebar-header {
  display: flex;
  justify-content: flex-start;
  background: white;
  color: var(--dark);
  font-size: 1.4em;
}

.sidebar-button {
  flex-shrink: 0;
  font-size: 1.4rem;
}

#map-app-sidebar-history-navigation {
  display: flex;
  flex-wrap: nowrap;
}

.w3-button:hover {
  color: white !important;
  background-color: var(--dark) !important;
}

.w3-btn:focus,
.w3-button:focus {
  outline: none;
}

.map-app-sidebar-fixed-section {
  background-color: white;
}

.map-app-sidebar-scrollable-section {
  position: relative;
  flex: 1 1 auto;
  overflow-y: auto;
  -webkit-overflow-scrolling: touch;
}

.sea-directory-list,
.sea-initiative-list {
  list-style: none;
  font-size: 1.05em;
  padding: 0;
  margin: 0 0 1.6em;
}

.sea-initiative-list {
  margin: 0;
  overflow-y: scroll;
  -webkit-overflow-scrolling: touch;
}

.sea-directory-list li,
.sea-initiative-list li {
  margin: 0;
  padding: 0.4rem 1rem 0.4rem 1.25rem;
  user-select: none;
}

.sea-directory-list li:hover,
.sea-field-active {
  color: white;
  background-color: var(--dark);
  cursor: pointer;
  /* font-weight: 400; */
}

.sea-initiative-list li:hover,
.sea-sidebar h2.sea-field:hover {
  color: var(--dark);
  background-color: white;
  cursor: pointer;
}

.sea-initiative-active {
  color: var(--dark);
  background-color: white;
}

.sea-search-initiative-active {
  color: white;
  background-color: var(--dark);
}

.ml-auto {
  margin-left: auto;
}

.mr-auto {
  margin-right: auto;
}

.m-auto {
  margin: auto;
}

.map-app-search-form {
  max-width: 300px;
  width: 100%;
}

.sea-sidebar,
.w3-modal {
  z-index: 40;
}

/* Sidebar & Popup */
.sea-initiative-popup .sea-initiative-details,
.sea-initiative-sidebar .sea-initiative-details {
  padding: 1em 1.5em;
  background: white;
}

.sea-initiative-popup .sea-initiative-contact,
.sea-initiative-sidebar .sea-initiative-contact {
  padding: 1em 1.5em 1.5em;
  background: #f0f0f0;
}

/* Sidebar */
.sea-initiative-sidebar .sea-initiative-details {
  padding-top: 0;
}

/* Popup */

div.leaflet-popup-content {
  /* NB also requires setting maxWidth in leaflet Marker bindpopup, to make popup wide enough for big text */
  /* 200% works well for presentations: */
  /*font-size: 200%; */
  max-height: 210px;
}

.sea-initiative-popup .leaflet-popup-content-wrapper {
  box-shadow: 0 1px 10px rgba(0, 0, 0, 0.2);
  border-radius: 6px;
  padding: 0;
}

.sea-initiative-popup .leaflet-popup-content {
  display: flex;
  flex-direction: row;
  margin: 0;
}

.sea-initiative-popup .sea-initiative-details {
  max-height: 400px;
  width: 66%;
  overflow-y: auto;
  -webkit-overflow-scrolling: touch;
  padding: 1em 1.5em;
  border-radius: 6px 0 0 6px;
  background: white;
}

.sea-initiative-popup .sea-initiative-contact {
  flex-grow: 1;
  padding: 1em 1.5em 1.5em;
  border-radius: 0 6px 6px 0;
  background: #f0f0f0;
}

.sea-initiative-popup h2,
.sea-initiative-popup h3,
.sea-initiative-popup h4,
.sea-initiative-popup h5,
.sea-initiative-popup p {
  font-family: var(--sea-font-family-sans-serif);
  font-weight: 700;
  font-size: 1.3rem;
  margin-bottom: 0.3rem;
}

.sea-initiative-popup h3,
.sea-initiative-sidebar-content h3 {
  font-weight: 600;
  font-size: 1rem;
  margin-top: 0.9rem;
}

.sea-initiative-popup h4,
.sea-initiative-sidebar-content h4 {
  font-weight: 600;
  font-size: 0.95rem;
  margin-top: 0rem;
  color: var(--dark-gray);
}

.sea-initiative-popup h5,
.sea-initiative-sidebar-content h5 {
  font-weight: 500;
  font-size: 0.9rem;
  margin-top: 0rem;
  color: var(--dark-gray);
}

.sea-initiative-popup p,
.sea-initiative-sidebar-content p {
  font-weight: 300;
  font-size: 0.9rem;
  margin: 0.5rem 0;
}

.sea-initiative-links a:link,
.sea-initiative-links a:visited,
.sea-initiative-links a:hover,
.sea-initiative-links a:active {
  text-decoration: none;
  color: var(--dark);
  font-size: 1.2rem;
  padding-right: 0.5rem;
  margin-top: 0.7rem;
}

@media (max-device-width: 1080px) {
  .sea-initiatives-list-sidebar {
    transform: translateX(-100%);
    z-index: 100;
  }

  .sea-sidebar-list-initiatives .sea-initiatives-list-sidebar {
    transform: translateX(0%);
  }

  .sea-sidebar-open.sea-sidebar-list-initiatives .sea-initiatives-list-sidebar {
    transform: translateX(0);
  }
}

@media (max-device-width: 800px) {
  .sea-initiative-popup {
    display: none;
  }

  .sea-initiative-sidebar-open {
    transform: translateX(0);
  }
}

#dir-filter {
  border-top-style: hidden;
  border-right-style: hidden;
  border-left-style: hidden;
  border-bottom-style: hidden;
  background-color: white;
  caret-color: transparent;
  overflow: hidden;
  opacity: 0;
  padding: 0px 0px 0px 16px;
  margin: 0px;
  width: auto;
}

#dir-filter:focus {
  outline: none;
}

#dir-title {
  padding: 0px 0px 0px 16px;
}

#loadingCirclespin {
  border: 16px solid #f3f3f3;
  border-radius: 50%;
  border-top: 16px solid #3498db;
  width: 300px;
  height: 300px;

  display: block;
  position: fixed;
  top: 50%;
  left: 50%;
  margin-top: -150px;
  margin-left: -150px;

  -webkit-animation: spin 1s linear infinite;
  /* Safari */
  animation: spin 1s linear infinite;
}

/* Safari */
@-webkit-keyframes spin {
  0% {
    -webkit-transform: rotate(0deg);
  }

  100% {
    -webkit-transform: rotate(360deg);
  }
}

@keyframes spin {
  0% {
    transform: rotate(0deg);
  }

  100% {
    transform: rotate(360deg);
  }
}

#loadingCircletxt {
  position: absolute;
  width: 200px;
  height: 100px;
  top: 50%;
  left: 50%;
  margin-left: -100px;
  /* margin is -0.5 * dimension */
  margin-top: -40px;
  font-size: 20px;
}

#map-app-leaflet-map {
  text-align: center;
}

.initiative-list-sidebar-btn-wrapper {
  display: none;
}
/* ... */

